--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
